--- a/index.html
+++ b/index.html
@@ -771,15 +771,16 @@
                     <div class="member-header">
                         <div class="member-name">👨‍💻 홍서의</div>
                         <div class="member-stats">
-                            <span>총 5점 → 5점</span>
-                            <span class="completion-rate excellent">100%</span>
+                            <span>총 11점 → 9.8점</span>
+                            <span class="completion-rate good">89.1%</span>
                             <span class="expand-icon">▼</span>
                         </div>
                         <div class="progress-bar">
-                            <div class="progress-fill" style="width: 100%"></div>
+                            <div class="progress-fill" style="width: 89.1%"></div>
                         </div>
                     </div>
                     <div class="member-details">
+                        <!-- 9/22 보고서 내용 -->
                         <div class="task-item">
                             <div class="task-title">Zone 활동 정보 창 호출 버튼 영역 위치 변경</div>
                             <div class="task-meta">
@@ -831,6 +832,44 @@
                                     <li>적용하기 버튼 변경된 사항이 있을 경우에만 활성화</li>
                                     <li>적용하기 버튼 누른 후 토스트 메시지 출력</li>
                                     <li>적용하기 버튼을 누르지 않았을 때 종료하기 버튼 누르면 팝업 메뉴 출력</li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <!-- 9/29 보고서 추가 내용 -->
+                        <div class="task-item">
+                            <div class="task-title">기본 설정 탭 내용 확장</div>
+                            <div class="task-meta">
+                                <span class="task-points">3점</span>
+                                <span class="task-progress">80% 완료 (2.4점)</span>
+                            </div>
+                            <div class="task-details">
+                                <ul>
+                                    <li>검색 키워드 설정 버튼</li>
+                                    <li>Myspace 검색 키워드 타이틀 문구</li>
+                                    <li>텍스트 입력 박스</li>
+                                    <li>등록 버튼</li>
+                                    <li>등록된 키워드 영역</li>
+                                    <li>관심 주제 타이틀 문구</li>
+                                    <li>관심 주제 관련 안내 텍스트</li>
+                                    <li>관심 주제 체크 박스 영역</li>
+                                    <li>닫기 버튼</li>
+                                    <li>팝업 크기 자동 조절</li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="task-item">
+                            <div class="task-title">팬 관리 탭 내용 확장</div>
+                            <div class="task-meta">
+                                <span class="task-points">3점</span>
+                                <span class="task-progress">80% 완료 (2.4점)</span>
+                            </div>
+                            <div class="task-details">
+                                <ul>
+                                    <li>검색어 입력 영역</li>
+                                    <li>검색 버튼</li>
+                                    <li>팬 목록 영역</li>
                                 </ul>
                             </div>
                         </div>
@@ -890,7 +929,7 @@
                     <div class="member-header">
                         <div class="member-name">🎨 김하혜 (UI 디자이너)</div>
                         <div class="member-stats">
-                            <span>총 6점 → 6점</span>
+                            <span>총 6.5점 → 6.5점</span>
                             <span class="completion-rate excellent">100%</span>
                             <span class="expand-icon">▼</span>
                         </div>
@@ -964,6 +1003,19 @@
                                     <li>AI 챗봇 1:1대화 버전 시나리오 제작</li>
                                     <li>대화 펼쳐보기 UI 제작</li>
                                     <li><a href="https://www.figma.com/design/VbmP10yug6xZ4lbdvwU4oL/oneofus?node-id=23592-1435&t=9QOydzeIrct2vMpj-4" class="task-link">피그마 링크</a></li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="task-item">
+                            <div class="task-title">AI 대화 말풍선 애니메이션 레퍼런스 리서치</div>
+                            <div class="task-meta">
+                                <span class="task-points">0.5점</span>
+                                <span class="task-progress">100% 완료</span>
+                            </div>
+                            <div class="task-details">
+                                <ul>
+                                    <li>AI 챗봇 말풍선 애니메이션 레퍼런스 리서치 및 공유 완료</li>
                                 </ul>
                             </div>
                         </div>
@@ -1253,11 +1305,11 @@
                         <div class="member-name">📋 김진형 (기획)</div>
                         <div class="member-stats">
                             <span>총 14.5점 → 9.5점</span>
-                            <span class="completion-rate good">70%</span>
+                            <span class="completion-rate average">65.5%</span>
                             <span class="expand-icon">▼</span>
                         </div>
                         <div class="progress-bar">
-                            <div class="progress-fill" style="width: 70%"></div>
+                            <div class="progress-fill" style="width: 65.5%"></div>
                         </div>
                     </div>
                     <div class="member-details">
@@ -1352,7 +1404,7 @@
                     <div class="member-header">
                         <div class="member-name">👨‍💻 최진우 (풀스택)</div>
                         <div class="member-stats">
-                            <span>총 8점 → 8점</span>
+                            <span>총 8.5점 → 8.5점</span>
                             <span class="completion-rate excellent">100%</span>
                             <span class="expand-icon">▼</span>
                         </div>
@@ -1434,7 +1486,7 @@
                         <div class="task-item">
                             <div class="task-title">운영툴 개발 작업</div>
                             <div class="task-meta">
-                                <span class="task-points">5점</span>
+                                <span class="task-points">6.5점</span>
                                 <span class="task-progress">100% 완료</span>
                             </div>
                             <div class="task-details">
