--- a/index.html
+++ b/index.html
@@ -1510,8 +1510,8 @@
             <div class="slackbot-section">
                 <h3>🤖 슬랙봇 개발 계획</h3>
                 <p><strong>개발 담당:</strong> 양지석 개발실장 직접 개발 예정</p>
-                <p><strong>알림 주기:</strong> 매주 목요일, 금요일 자동 알림</p>
-                <p><strong>기능:</strong> 스프린트 보고서 제출 독촉 및 완료율 모니터링</p>
+                <p><strong>방식:</strong> 슬랙 채널에서 스프린트 리포트 제출 및 조회</p>
+                <p><strong>기능:</strong> 수집 자동화, 대시 보드 자동화</p>
             </div>
 
             <!-- 태그 시스템 제안 -->
@@ -1521,14 +1521,16 @@
 
                 <div class="tag-examples">
                     <div class="tag-example">
-                        <div class="tag">#SuperPlat</div>
-                        <div class="tag">#SuperTown</div>
+                        <div class="tag">#PC</div>
+                        <div class="tag">#웹</div>
                         <div class="tag">#모바일</div>
+						<div class="tag">#서버</div>
                     </div>
                     <div class="tag-example">
                         <div class="tag">#UI/UX</div>
                         <div class="tag">#백엔드</div>
                         <div class="tag">#기획</div>
+						<div class="tag">#개발</div>
                     </div>
                     <div class="tag-example">
                         <div class="tag">#긴급</div>
@@ -1536,7 +1538,7 @@
                         <div class="tag">#완료</div>
                     </div>
                     <div class="tag-example">
-                        <div class="tag">#리팩토링</div>
+                        <div class="tag">#디자인</div>
                         <div class="tag">#신규기능</div>
                         <div class="tag">#버그수정</div>
                     </div>
@@ -1550,7 +1552,7 @@
                 <div class="decision-item">
                     <strong>1. 보고서 제출률 개선 방안</strong>
                     <ul>
-                        <li>슬랙봇 도입으로 자동 알림 시스템 구축</li>
+                        <li>슬랙봇 도입</li>
                         <li>미제출자 대상 개별 피드백 및 지원</li>
                     </ul>
                 </div>
