--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@
                 </div>
                 <div class="stat-box">
                     <h3>총 스토리포인트</h3>
-                    <div class="value">420.5점</div>
-                    <div style="font-size: 0.75rem; opacity: 0.7; margin-top: 5px;">지연 제출 53점 포함</div>
+                    <div class="value">441.5점</div>
+                    <div style="font-size: 0.75rem; opacity: 0.7; margin-top: 5px;">지연 제출 74점 포함</div>
                 </div>
                 <div class="stat-box">
                     <h3>완료 스토리포인트</h3>
-                    <div class="value">375.95점</div>
+                    <div class="value">393.95점</div>
                 </div>
                 <div class="stat-box">
                     <h3>평균 완료율</h3>
@@ -335,15 +335,15 @@
                     <div class="sprint-stats">
                         <div class="stat-item">
                             <div class="stat-label">계획 스토리포인트</div>
-                            <div class="stat-value">137점</div>
+                            <div class="stat-value">158점</div>
                         </div>
                         <div class="stat-item">
                             <div class="stat-label">완료 스토리포인트</div>
-                            <div class="stat-value">126.4점</div>
+                            <div class="stat-value">144.4점</div>
                         </div>
                         <div class="stat-item">
                             <div class="stat-label">제출률</div>
-                            <div class="stat-value">83.3%</div>
+                            <div class="stat-value">100%</div>
                         </div>
                         <div class="stat-item">
                             <div class="stat-label">참여 인원</div>
@@ -354,15 +354,18 @@
                     <div class="completion-section">
                         <div class="completion-label">
                             <span class="stat-label">평균 완료율</span>
-                            <span class="completion-rate excellent">92%</span>
+                            <span class="completion-rate excellent">91%</span>
                         </div>
                         <div class="progress-bar">
-                            <div class="progress-fill" style="width: 92%"></div>
+                            <div class="progress-fill" style="width: 91%"></div>
                         </div>
                     </div>
 
                     <div class="sprint-footer">
                         <span class="badge new">최신</span>
+                        <a href="2025/10.1-10.19/late-submission.html" onclick="event.stopPropagation();" style="background: linear-gradient(135deg, #ea580c, #c2410c); color: white; padding: 6px 12px; border-radius: 20px; font-size: 0.85rem; font-weight: 600; text-decoration: none; display: inline-flex; align-items: center; gap: 5px;">
+                            ⚠️ 지연 제출 2명
+                        </a>
                         <span class="view-details">상세보기 →</span>
                     </div>
                 </div>
