--- a/index.html
+++ b/index.html
@@ -363,6 +363,9 @@
 
                     <div class="sprint-footer">
                         <span class="badge new">최신</span>
+                        <a href="2025/10.20-10.24/late-submission.html" onclick="event.stopPropagation();" style="background: linear-gradient(135deg, #ea580c, #c2410c); color: white; padding: 6px 12px; border-radius: 20px; font-size: 0.85rem; font-weight: 600; text-decoration: none; display: inline-flex; align-items: center; gap: 5px;">
+                            ⚠️ 지연 제출 6명
+                        </a>
                         <span class="view-details">상세보기 →</span>
                     </div>
                 </div>
