--- a/index.html
+++ b/index.html
@@ -291,16 +291,16 @@
             <div class="stats-overview">
                 <div class="stat-box">
                     <h3>총 스프린트</h3>
-                    <div class="value">4개</div>
+                    <div class="value">5개</div>
                 </div>
                 <div class="stat-box">
                     <h3>총 스토리포인트</h3>
-                    <div class="value">612.5점</div>
+                    <div class="value">692점</div>
                     <div style="font-size: 0.75rem; opacity: 0.7; margin-top: 5px;">지연 제출 74점 포함</div>
                 </div>
                 <div class="stat-box">
                     <h3>완료 스토리포인트</h3>
-                    <div class="value">546.85점</div>
+                    <div class="value">617.05점</div>
                 </div>
                 <div class="stat-box">
                     <h3>평균 완료율</h3>
@@ -319,9 +319,56 @@
                 <button class="filter-btn">2025년</button>
                 <button class="filter-btn">9월</button>
                 <button class="filter-btn">10월</button>
+                <button class="filter-btn">11월</button>
             </div>
 
             <div class="sprints-grid">
+                <!-- 스프린트 5: 11.03-11.07 -->
+                <div class="sprint-card" onclick="location.href='2025/11.03-11.07/index.html'">
+                    <div class="sprint-header">
+                        <div class="sprint-period">2025년 11월 1주차 스프린트</div>
+                        <div class="sprint-duration">
+                            <span>📅 11월 3일 ~ 11월 7일</span>
+                            <span>⏱️ 5일</span>
+                        </div>
+                    </div>
+
+                    <div class="sprint-stats">
+                        <div class="stat-item">
+                            <div class="stat-label">계획 스토리포인트</div>
+                            <div class="stat-value">79.5점</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-label">완료 스토리포인트</div>
+                            <div class="stat-value">70.2점</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-label">제출률</div>
+                            <div class="stat-value">58%</div>
+                            <div style="font-size: 0.85rem; color: #64748b; margin-top: 5px;">(7/12명)</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-label">참여 인원</div>
+                            <div class="stat-value">12명</div>
+                        </div>
+                    </div>
+
+                    <div class="completion-section">
+                        <div class="completion-label">
+                            <span class="stat-label">평균 완료율</span>
+                            <span class="completion-rate good">88%</span>
+                        </div>
+                        <div class="progress-bar">
+                            <div class="progress-fill" style="width: 88%"></div>
+                        </div>
+                    </div>
+
+                    <div class="sprint-footer">
+                        <span class="badge new">최신</span>
+                        <span class="view-details">상세보기 →</span>
+                    </div>
+                </div>
+
                 <!-- 스프린트 4: 10.27-10.31 -->
                 <div class="sprint-card" onclick="location.href='2025/10.27-10.31/index.html'">
                     <div class="sprint-header">
@@ -362,7 +409,10 @@
                     </div>
 
                     <div class="sprint-footer">
-                        <span class="badge new">최신</span>
+                        <span class="badge" style="background: #e5e7eb; color: #64748b;">1주차</span>
+                        <a href="2025/10.27-10.31/late-submission.html" onclick="event.stopPropagation();" style="background: linear-gradient(135deg, #ea580c, #c2410c); color: white; padding: 6px 12px; border-radius: 20px; font-size: 0.85rem; font-weight: 600; text-decoration: none; display: inline-flex; align-items: center; gap: 5px;">
+                            ⚠️ 지연 제출 2명
+                        </a>
                         <span class="view-details">상세보기 →</span>
                     </div>
                 </div>
