--- a/index.html
+++ b/index.html
@@ -291,20 +291,20 @@
             <div class="stats-overview">
                 <div class="stat-box">
                     <h3>총 스프린트</h3>
-                    <div class="value">5개</div>
+                    <div class="value">6개</div>
                 </div>
                 <div class="stat-box">
                     <h3>총 스토리포인트</h3>
-                    <div class="value">692점</div>
+                    <div class="value">839점</div>
                     <div style="font-size: 0.75rem; opacity: 0.7; margin-top: 5px;">지연 제출 74점 포함</div>
                 </div>
                 <div class="stat-box">
                     <h3>완료 스토리포인트</h3>
-                    <div class="value">617.05점</div>
+                    <div class="value">736.7점</div>
                 </div>
                 <div class="stat-box">
                     <h3>평균 완료율</h3>
-                    <div class="value">89%</div>
+                    <div class="value">88%</div>
                 </div>
             </div>
         </div>
@@ -323,6 +323,52 @@
             </div>
 
             <div class="sprints-grid">
+                <!-- 스프린트 6: 11.10-11.14 -->
+                <div class="sprint-card" onclick="location.href='2025/11.10-11.14/index.html'">
+                    <div class="sprint-header">
+                        <div class="sprint-period">2025년 11월 2주차 스프린트</div>
+                        <div class="sprint-duration">
+                            <span>📅 11월 10일 ~ 11월 14일</span>
+                            <span>⏱️ 5일</span>
+                        </div>
+                    </div>
+
+                    <div class="sprint-stats">
+                        <div class="stat-item">
+                            <div class="stat-label">계획 스토리포인트</div>
+                            <div class="stat-value">147점</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-label">완료 스토리포인트</div>
+                            <div class="stat-value">119.6점</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-label">제출률</div>
+                            <div class="stat-value">92%</div>
+                            <div style="font-size: 0.85rem; color: #64748b; margin-top: 5px;">(11/12명)</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-label">참여 인원</div>
+                            <div class="stat-value">12명</div>
+                        </div>
+                    </div>
+
+                    <div class="completion-section">
+                        <div class="completion-label">
+                            <span class="stat-label">평균 완료율</span>
+                            <span class="completion-rate good">81%</span>
+                        </div>
+                        <div class="progress-bar">
+                            <div class="progress-fill" style="width: 81%"></div>
+                        </div>
+                    </div>
+
+                    <div class="sprint-footer">
+                        <span class="badge new">최신</span>
+                        <span class="view-details">상세보기 →</span>
+                    </div>
+                </div>
+
                 <!-- 스프린트 5: 11.03-11.07 -->
                 <div class="sprint-card" onclick="location.href='2025/11.03-11.07/index.html'">
                     <div class="sprint-header">
@@ -364,7 +410,7 @@
                     </div>
 
                     <div class="sprint-footer">
-                        <span class="badge new">최신</span>
+                        <span class="badge" style="background: #e5e7eb; color: #64748b;">1주차</span>
                         <span class="view-details">상세보기 →</span>
                     </div>
                 </div>
