--- a/index.html
+++ b/index.html
@@ -369,46 +369,48 @@
                     </div>
                 </div>
 
-                <!-- 스프린트 5.5: 11.10-11.17 (지연 제출만) -->
-                <div class="sprint-card" onclick="location.href='2025/11.10-11.17/late-submission.html'">
+                <!-- 스프린트 5.5: 11.10-11.14 -->
+                <div class="sprint-card" onclick="location.href='2025/11.10-11.17/index.html'">
                     <div class="sprint-header">
                         <div class="sprint-period">2025년 11월 2주차 스프린트</div>
                         <div class="sprint-duration">
-                            <span>📅 11월 10일 ~ 11월 17일</span>
-                            <span>⏱️ 8일</span>
+                            <span>📅 11월 10일 ~ 11월 14일</span>
+                            <span>⏱️ 5일</span>
                         </div>
                     </div>
 
                     <div class="sprint-stats">
                         <div class="stat-item">
                             <div class="stat-label">계획 스토리포인트</div>
-                            <div class="stat-value">9점</div>
+                            <div class="stat-value">147점</div>
                         </div>
                         <div class="stat-item">
                             <div class="stat-label">완료 스토리포인트</div>
-                            <div class="stat-value">9점</div>
+                            <div class="stat-value">119.6점</div>
                         </div>
                         <div class="stat-item">
-                            <div class="stat-label">지연 제출</div>
-                            <div class="stat-value">1명</div>
+                            <div class="stat-label">제출률</div>
+                            <div class="stat-value">92%</div>
+                            <div style="font-size: 0.85rem; color: #64748b; margin-top: 5px;">(11/12명)</div>
                         </div>
                         <div class="stat-item">
                             <div class="stat-label">참여 인원</div>
-                            <div class="stat-value">1명</div>
+                            <div class="stat-value">12명</div>
                         </div>
                     </div>
 
                     <div class="completion-section">
                         <div class="completion-label">
                             <span class="stat-label">평균 완료율</span>
-                            <span class="completion-rate excellent">100%</span>
+                            <span class="completion-rate good">81%</span>
                         </div>
                         <div class="progress-bar">
-                            <div class="progress-fill" style="width: 100%"></div>
+                            <div class="progress-fill" style="width: 81%"></div>
                         </div>
                     </div>
 
                     <div class="sprint-footer">
+                        <span class="badge" style="background: #e5e7eb; color: #64748b;">2주차</span>
                         <a href="2025/11.10-11.17/late-submission.html" onclick="event.stopPropagation();" style="background: linear-gradient(135deg, #ea580c, #c2410c); color: white; padding: 6px 12px; border-radius: 20px; font-size: 0.85rem; font-weight: 600; text-decoration: none; display: inline-flex; align-items: center; gap: 5px;">
                             ⚠️ 지연 제출 1명
                         </a>
