--- a/index.html
+++ b/index.html
@@ -291,20 +291,20 @@
             <div class="stats-overview">
                 <div class="stat-box">
                     <h3>총 스프린트</h3>
-                    <div class="value">9개</div>
+                    <div class="value">10개</div>
                 </div>
                 <div class="stat-box">
                     <h3>총 스토리포인트</h3>
-                    <div class="value">948.5점</div>
+                    <div class="value">984.5점</div>
                     <div style="font-size: 0.75rem; opacity: 0.7; margin-top: 5px;">지연 제출 83점 포함</div>
                 </div>
                 <div class="stat-box">
                     <h3>완료 스토리포인트</h3>
-                    <div class="value">848.8점</div>
+                    <div class="value">876.7점</div>
                 </div>
                 <div class="stat-box">
                     <h3>평균 완료율</h3>
-                    <div class="value">89.5%</div>
+                    <div class="value">89.1%</div>
                 </div>
             </div>
         </div>
@@ -324,6 +324,52 @@
             </div>
 
             <div class="sprints-grid">
+                <!-- 스프린트 10: 12.08-12.12 -->
+                <div class="sprint-card" onclick="location.href='2025/12.08-12.12/index.html'">
+                    <div class="sprint-header">
+                        <div class="sprint-period">2025년 12월 2주차 스프린트</div>
+                        <div class="sprint-duration">
+                            <span>12월 8일 ~ 12월 12일</span>
+                            <span>5일</span>
+                        </div>
+                    </div>
+
+                    <div class="sprint-stats">
+                        <div class="stat-item">
+                            <div class="stat-label">계획 스토리포인트</div>
+                            <div class="stat-value">36점</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-label">완료 스토리포인트</div>
+                            <div class="stat-value">27.9점</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-label">제출률</div>
+                            <div class="stat-value">67%</div>
+                            <div style="font-size: 0.85rem; color: #64748b; margin-top: 5px;">(8/12명)</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-label">참여 인원</div>
+                            <div class="stat-value">8명</div>
+                        </div>
+                    </div>
+
+                    <div class="completion-section">
+                        <div class="completion-label">
+                            <span class="stat-label">평균 완료율</span>
+                            <span class="completion-rate good">77.5%</span>
+                        </div>
+                        <div class="progress-bar">
+                            <div class="progress-fill" style="width: 77.5%"></div>
+                        </div>
+                    </div>
+
+                    <div class="sprint-footer">
+                        <span class="badge new">최신</span>
+                        <span class="view-details">상세보기 →</span>
+                    </div>
+                </div>
+
                 <!-- 스프린트 9: 12.01-12.05 -->
                 <div class="sprint-card" onclick="location.href='2025/12.01-12.05/index.html'">
                     <div class="sprint-header">
@@ -365,7 +411,7 @@
                     </div>
 
                     <div class="sprint-footer">
-                        <span class="badge new">최신</span>
+                        <span class="badge" style="background: #e5e7eb; color: #64748b;">1주차</span>
                         <span class="view-details">상세보기 →</span>
                     </div>
                 </div>
